# Chatcolor

./: .gitignore  Cargo.toml  README.md  config.yml
src/: color_parser.rs  commands.rs  data.rs  lib.rs  storage.rs
src/commands/: chatcolor.rs  mod.rs  namecolor.rs
src/config/: mod.rs
src/handlers/: chat_handler.rs  mod.rs
src/resources/: config.yml  messages.yml
src/utils/: color_parser.rs  color_utils.rs  mod.rs  yaml_manager.rs
