[package]
name = "chat-color"
version = "0.1.0"
edition = "2021"

[dependencies]
pumpkin = { path = "../../PumpkinCE/pumpkin" }
pumpkin-util = { path = "../../PumpkinCE/pumpkin-util" }
pumpkin-api-macros = { path = "../../PumpkinCE/pumpkin-api-macros" }
pumpkin-world = { path = "../../PumpkinCE/pumpkin-world" }
pumpkin-data = { path = "../../PumpkinCE/pumpkin-data" }
pumpkin-protocol = { path = "../../PumpkinCE/pumpkin-protocol" }
pumpkin-inventory = { path = "../../PumpkinCE/pumpkin-inventory" }

async-trait = "0.1"
tokio = { version = "1.46", features = ["rt-multi-thread"] }
futures = "0.3.31"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.21.1"
lazy_static = "1.5.0"

[lib]
name = "chat_color"
crate-type = ["cdylib"] 